--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,21 +2,25 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 # ペイン内容の保存をONに
 set -g @resurrect-capture-pane-contents 'on'
 # 例えば、makeコマンドでの開発サーバやpythonのREPLを起動することが多いので以下設定をしています
 set -g @resurrect-processes '"~make" "~python"'
 
-set -g @plugin 'tmux-plugins/tmux-continuum'
 # tmux起動時の自動リストアをONに
 set -g @continuum-restore 'on'
+# auto start terminal
+set -g @continuum-boot 'on'
 
 #utf setting
 set-window-option -g mode-keys vi
 set-window-option -g automatic-rename off
 
 # prefix y End copy & exit copy-mode
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+# bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # set -g status-bg white
 # set -g status-fg black
@@ -28,8 +32,8 @@ set -s escape-time 0
 set-option -g default-terminal screen-256color
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-set-option -g default-shell /usr/local/bin/fish
-# set-option -g default-shell "${SHELL}"
+# set-option -g default-shell /usr/local/bin/fish
+set-option -g default-shell "${SHELL}"
 set -g default-command "${SHELL}"
 
 # set -g pane-active-border-fg white
@@ -170,7 +174,8 @@ bind -n M-e choose-session
 bind -n M-w choose-tree -w
 # Reattach each new window to the user bootstrap namespace
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-set -g default-command "which reattach-to-user-namespace > /dev/null ; and reattach-to-user-namespace -l $SHELL ; or $SHELL -l"
+# set -g default-command "which reattach-to-user-namespace > /dev/null ; and reattach-to-user-namespace -l $SHELL ; or $SHELL -l"
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 
 # set -g status-attr dim
 set -g status-left-length 32
