--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,7 @@ set -g @resurrect-processes '"~make" "~python"'
 set -g @continuum-restore 'on'
 # auto start terminal
 set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'alacritty,fullscreen'
 
 #utf setting
 set-window-option -g mode-keys vi
@@ -175,7 +176,8 @@ bind -n M-w choose-tree -w
 # Reattach each new window to the user bootstrap namespace
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 # set -g default-command "which reattach-to-user-namespace > /dev/null ; and reattach-to-user-namespace -l $SHELL ; or $SHELL -l"
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+# set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+if-shell "[ -x $(where reattach-to-user-namespace) ]" 'set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 # set -g status-attr dim
 set -g status-left-length 32
