--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,7 @@ set -g @resurrect-processes '"~make" "~python"'
 set -g @continuum-restore 'on'
 # auto start terminal
 set -g @continuum-boot 'on'
-set -g @continuum-boot-options 'alacritty,fullscreen'
+# set -g @continuum-boot-options 'alacritty,fullscreen'
 
 #utf setting
 set-window-option -g mode-keys vi
@@ -30,8 +30,10 @@ set -s escape-time 0
 # setw -g window-status-current-attr underscore
 
 # 256色ターミナル
-set-option -g default-terminal screen-256color
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set-option -g default-terminal "screen-256color""
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
+set -ag terminal-overrides ",alacritty:RGB"
 
 # set-option -g default-shell /usr/local/bin/fish
 set-option -g default-shell "${SHELL}"
@@ -173,11 +175,12 @@ bind -n M-s split-window -v -c "#{pane_current_path}"
 bind -n M-a choose-tree
 bind -n M-e choose-session
 bind -n M-w choose-tree -w
+
 # Reattach each new window to the user bootstrap namespace
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 # set -g default-command "which reattach-to-user-namespace > /dev/null ; and reattach-to-user-namespace -l $SHELL ; or $SHELL -l"
 # set-option -g default-command "reattach-to-user-namespace -l $SHELL"
-if-shell "[ -x $(where reattach-to-user-namespace) ]" 'set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# if-shell "[ -x $(where reattach-to-user-namespace) ]" 'set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 # set -g status-attr dim
 set -g status-left-length 32
