--- a/.tmux.conf
+++ b/.tmux.conf
@@ -154,6 +154,11 @@ bind ^L select-pane -t :.+
 unbind l
 bind l select-pane -t :.+
 
+bind ^h select-pane -L
+bind ^j select-pane -D
+bind ^k select-pane -U
+bind ^l select-pane -R
+
 # " windowlist -b
 #unbind '"'
 #bind '"' choose-window
