--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,8 @@ set -g @continuum-restore 'on'
 # auto start terminal
 set -g @continuum-boot 'on'
 # set -g @continuum-boot-options 'alacritty,fullscreen'
+set -g @plugin 'erikw/tmux-powerline'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 #utf setting
 set-window-option -g mode-keys vi
@@ -199,8 +201,8 @@ set -g status-bg colour234
 # set -g pane-border-fg colour245
 # set -g pane-active-border-fg colour39
 
-run-shell "powerline-daemon -q"
-source ~/.pyenv/versions/neovim-3/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
+# run-shell "powerline-daemon -q"
+# source ~/.pyenv/versions/neovim-3/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
 set -g status-interval 2
 set -g status-left "#[fg=colour108,bg=colour237,bold] [#S:#I:#P]  #[fg=green,bg=black]#(tmux-mem-cpu-load --colors -p -a 0 --interval 2)#[default]"
 set -g status-left-length 60
