--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,8 @@ set -g @continuum-restore 'on'
 # auto start terminal
 set -g @continuum-boot 'on'
 # set -g @continuum-boot-options 'alacritty,fullscreen'
-set -g @plugin 'erikw/tmux-powerline'
+# set -g @plugin 'erikw/tmux-powerline'
+# set -g @plugin 'wfxr/tmux-power'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 #utf setting
