--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,9 +64,9 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 #bind C-t send-prefix
 
 # Set the prefix to ^A
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+# unbind C-b
+# set -g prefix C-a
+bind C-b send-prefix
 
 # Bind appropriate commands similar to screen.
 # lockscreen ^X x
