--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,12 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+  set -g @prefix_highlight_show_copy_mode 'on'
+  set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold' # default is 'fg=default,bg=yellow'
+  set -g @prefix_highlight_show_sync_mode 'on'
+  set -g @prefix_highlight_sync_mode_attr 'fg=black,bg=green' # default is 'fg=default,bg=yellow'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -184,6 +191,8 @@ bind -n M-a choose-tree
 bind -n M-e choose-session
 bind -n M-w choose-tree -w
 
+bind Space popup -xC -yC -w70% -h70% -E 'tmux a -t popup || tmux new -s popup'
+
 # Reattach each new window to the user bootstrap namespace
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 # set -g default-command "which reattach-to-user-namespace > /dev/null ; and reattach-to-user-namespace -l $SHELL ; or $SHELL -l"
@@ -202,10 +211,10 @@ set -g status-bg colour234
 # set -g pane-border-fg colour245
 # set -g pane-active-border-fg colour39
 
-# run-shell "powerline-daemon -q"
-# source ~/.pyenv/versions/neovim-3/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
+run-shell "powerline-daemon -q"
+source ~/.pyenv/versions/neovim-3/lib/python3.11/site-packages/powerline/bindings/tmux/powerline.conf
 set -g status-interval 2
-set -g status-left "#[fg=colour108,bg=colour237,bold] [#S:#I:#P]  #[fg=green,bg=black]#(tmux-mem-cpu-load --colors -p -a 0 --interval 2)#[default]"
+set -g status-left "#{prefix_highlight}#[fg=colour108,bg=colour237,bold] [#S:#I:#P]  #[fg=green,bg=black]#(tmux-mem-cpu-load --colors -p -a 0 --interval 2)#[default]"
 set -g status-left-length 60
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
