--- a/.tmux.conf
+++ b/.tmux.conf
@@ -191,6 +191,7 @@ bind -n M-a choose-tree
 bind -n M-e choose-session
 bind -n M-w choose-tree -w
 
+unbind Space
 bind Space popup -xC -yC -w70% -h70% -E 'tmux a -t popup || tmux new -s popup'
 
 # Reattach each new window to the user bootstrap namespace
