--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ config/fish/fishd*
 config/fish/completions
 config/fish/conf.d
 config/fish/functions
+config/nvim*/*lock.json
 
 config/fisherman
 *_tags
