--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,8 +46,10 @@ set -g default-terminal "screen-256color"
 set -ag terminal-overrides ",alacritty:RGB"
 
 # set-option -g default-shell /usr/local/bin/fish
-set-option -g default-shell "${SHELL}"
-set -g default-command "${SHELL}"
+# set-option -g default-shell "${SHELL}"
+# set -g default-command "${SHELL}"
+set-option -g default-shell /opt/homebrew/bin/fish
+set -g default-command /opt/homebrew/bin/fish
 
 # set -g pane-active-border-fg white
 # set -g pane-active-border-bg black
@@ -71,9 +73,9 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 #bind C-t send-prefix
 
 # Set the prefix to ^A
-# unbind C-b
-# set -g prefix C-a
-bind C-b send-prefix
+unbind C-b
+set -g prefix C-a
+# bind C-b send-prefix
 
 # Bind appropriate commands similar to screen.
 # lockscreen ^X x
@@ -212,7 +214,7 @@ set -g status-bg colour234
 # set -g pane-border-fg colour245
 # set -g pane-active-border-fg colour39
 
-run-shell "powerline-daemon -q"
+run-shell "~/.pyenv/shims/powerline-daemon -q"
 source ~/.pyenv/versions/neovim-3/lib/python3.11/site-packages/powerline/bindings/tmux/powerline.conf
 set -g status-interval 2
 set -g status-left "#{prefix_highlight}#[fg=colour108,bg=colour237,bold] [#S:#I:#P]  #[fg=green,bg=black]#(tmux-mem-cpu-load --colors -p -a 0 --interval 2)#[default]"
