--- a/config/lazygit/config.yml
+++ b/config/lazygit/config.yml
@@ -1,6 +1,11 @@
 gui:
   showIcons: true
 
+git:
+  paging:
+    colorArg: always
+    pager: delta --dark --paging=never
+
 customCommands:
   - key: "<c-r>"
     command: "gh pr create --fill --web"
