--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,8 @@
 	safecrlf = true
 	editor = "nvim "
   pager = delta
+	fsmonitor = true
+	untrackedcache = true
 [interactive]
   diffFilter = delta --color-only
 [delta]
