--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -11,7 +11,10 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=DP-4,preferred,0x0,auto
+monitor=HDMI-A-2,preferred,3440x0,auto
+monitor=DP-5,preferred,0x1440,auto
+monitor=DP-6,preferred,1920x1440,auto
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -45,9 +48,11 @@ exec-once = dunst &
 exec-once = fcitx5 &
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = eww daemon &
-exec-once = eww open bar &
-exec-once = hyprpaper & firefox-bin
+# exec-once = eww daemon &
+# exec-once = eww open bar &
+exec-once = ~/.config/waybar/bin/launch_waybar.sh # waybar
+exec-once = nm-applet --indicator
+exec-once = hyprpaper & edge.sh
 exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE"
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -155,7 +160,10 @@ device {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-
+windowrule = float, Rofi
+windowrule = noborder, Rofi
+windowrule = float, title:^(sfml)$
+windowrule = center, title:^(sfml)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -166,9 +174,14 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu & sleep 0.2; hyprctl dispatch focuswindow "^(Rofi)"
-bind = $mainMod, P, pseudo, # dwindle
+# bind = $mainMod, R, exec, $menu & sleep 0.2; hyprctl dispatch focuswindow "^(Rofi)"
+bind = $mainMod, R, exec, sh $HOME/.config/rofi/bin/launcher & sleep 0.2; hyprctl dispatch focuswindow "^(Rofi)"
+bind = $mainMod, P, exec, sh $HOME/.config/rofi/bin/powermenu & sleep 0.2; hyprctl dispatch focuswindow "^(Rofi)"
+# bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+# screenshot
+bind = , print, exec, grim ~/Pictures/$(date '+%Y-%m-%d-%H:%M:%S').png
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
