--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -13,8 +13,8 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=DP-4,preferred,0x0,auto
 monitor=HDMI-A-2,preferred,3440x0,auto
-monitor=DP-5,preferred,0x1440,auto
-monitor=DP-6,preferred,1920x1440,auto
+monitor=DP-5,1920x1080,0x1440,1
+monitor=DP-6,1920x1080,1920x1080,1
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -174,6 +174,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, fullscreen,1
 # bind = $mainMod, R, exec, $menu & sleep 0.2; hyprctl dispatch focuswindow "^(Rofi)"
 bind = $mainMod, R, exec, sh $HOME/.config/rofi/bin/launcher & sleep 0.2; hyprctl dispatch focuswindow "^(Rofi)"
 bind = $mainMod, P, exec, sh $HOME/.config/rofi/bin/powermenu & sleep 0.2; hyprctl dispatch focuswindow "^(Rofi)"
