--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,9 +47,9 @@ set -ag terminal-overrides ",alacritty:RGB"
 
 # set-option -g default-shell /usr/local/bin/fish
 # set-option -g default-shell "${SHELL}"
-# set -g default-command "${SHELL}"
-set-option -g default-shell /opt/homebrew/bin/fish
-set -g default-command /opt/homebrew/bin/fish
+set -g default-command "${SHELL}"
+# set-option -g default-shell /opt/homebrew/bin/fish
+# set -g default-command /opt/homebrew/bin/fish
 
 # set -g pane-active-border-fg white
 # set -g pane-active-border-bg black
@@ -214,8 +214,9 @@ set -g status-bg colour234
 # set -g pane-border-fg colour245
 # set -g pane-active-border-fg colour39
 
-run-shell "~/.pyenv/shims/powerline-daemon -q"
-source ~/.pyenv/versions/neovim-3/lib/python3.11/site-packages/powerline/bindings/tmux/powerline.conf
+run-shell "powerline-daemon -q"
+source ~/.local/share/mise/installs/python/3/lib/python3.12/site-packages/powerline/bindings/tmux/powerline.conf
+# source ~/.pyenv/versions/neovim-3/lib/python3.11/site-packages/powerline/bindings/tmux/powerline.conf
 set -g status-interval 2
 set -g status-left "#{prefix_highlight}#[fg=colour108,bg=colour237,bold] [#S:#I:#P]  #[fg=green,bg=black]#(tmux-mem-cpu-load --colors -p -a 0 --interval 2)#[default]"
 set -g status-left-length 60
