--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -67,21 +67,25 @@ offset = { x = 0, y = 1 }
 [font.bold]
 # family = "Fira Code"
 family = 'UDEV Gothic 35NFLG'
+# family = 'Bizin Gothic Discord'
 # family = 'Monaspace Neon'
 
 [font.bold_italic]
 # family = "Fira Code"
 family = 'UDEV Gothic 35NFLG'
+# family = 'Bizin Gothic Discord'
 # family = 'Monaspace Neon'
 
 [font.italic]
 # family = "Fira Code"
 family = 'UDEV Gothic 35NFLG'
+# family = 'Bizin Gothic Discord'
 # family = 'Monaspace Neon'
 
 [font.normal]
 # family = "Fira Code"
 family = 'UDEV Gothic 35NFLG'
+# family = 'Bizin Gothic Discord'
 # family = 'Monaspace Neon'
 
 [keyboard]
