--- a/config/Brewfile
+++ b/config/Brewfile
@@ -27,6 +27,7 @@ brew "bash"
 brew "libssh2"
 brew "libgit2"
 brew "bat"
+brew "bit-git"
 brew "boost"
 brew "bottom"
 brew "gmp"
@@ -48,11 +49,11 @@ brew "ctags"
 brew "rtmpdump"
 brew "curl"
 brew "deno"
-brew "docker"
 brew "docker-machine"
 brew "docutils"
 brew "duf"
 brew "eza"
+brew "fastfetch"
 brew "libevent"
 brew "fd"
 brew "open-mpi"
@@ -79,7 +80,6 @@ brew "gnupg"
 brew "go"
 brew "pkg-config"
 brew "gobject-introspection"
-brew "goenv"
 brew "gpgme"
 brew "netpbm"
 brew "graphviz"
@@ -90,6 +90,7 @@ brew "libepoxy"
 brew "gtk+3"
 brew "httpie"
 brew "hub"
+brew "hyperfine"
 brew "shared-mime-info"
 brew "imagemagick"
 brew "jemalloc"
@@ -109,6 +110,7 @@ brew "libtermkey"
 brew "libvterm"
 brew "libxslt"
 brew "llvm@15"
+brew "lsd"
 brew "lua"
 brew "luarocks"
 brew "luv"
@@ -119,8 +121,6 @@ brew "memcached", restart_service: true
 brew "mercurial"
 brew "ninja"
 brew "meson"
-brew "terminal-notifier"
-brew "mikutter"
 brew "mise"
 brew "msgpack"
 brew "mysql"
@@ -128,7 +128,6 @@ brew "neofetch"
 brew "nghttp2"
 brew "nkf"
 brew "node-build"
-brew "nodenv"
 brew "openshift-cli"
 brew "openssl@1.1"
 brew "osx-cpu-temp"
@@ -154,6 +153,7 @@ brew "sk"
 brew "source-to-image"
 brew "starship"
 brew "stylua"
+brew "terminal-notifier"
 brew "tig"
 brew "tmux"
 brew "tmux-mem-cpu-load"
@@ -165,9 +165,9 @@ brew "vips"
 brew "viu"
 brew "watchman"
 brew "wget"
-brew "wxwidgets"
 brew "xdg-ninja"
 brew "yarn"
+brew "zoxide"
 brew "zplug"
 brew "elastic/tap/elasticsearch-full"
 brew "jdx/tap/usage"
@@ -186,8 +186,10 @@ cask "google-cloud-sdk"
 cask "hammerspoon"
 cask "lastpass"
 cask "notion"
+cask "orbstack"
 cask "postman"
 cask "raycast"
+cask "secretive"
 cask "stats"
 cask "tableplus"
 cask "visual-studio-code"
