--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,12 @@ config/fish/completions
 
 config/raycast
 
+config/btop/btop.log
+config/Slack
+config/Google/AndroidStudio2023.3
+config/.android
+config/coolero
+config/dconf
+config/discord
+config/google-chrome
+config/microsoft-edge
