--- a/.tmux.conf
+++ b/.tmux.conf
@@ -215,6 +215,7 @@ set -g status-bg colour234
 # set -g pane-active-border-fg colour39
 
 run-shell "powerline-daemon -q"
+run-shell "powerline-config tmux setup"
 source ~/.local/share/mise/installs/python/3/lib/python3.12/site-packages/powerline/bindings/tmux/powerline.conf
 # source ~/.pyenv/versions/neovim-3/lib/python3.11/site-packages/powerline/bindings/tmux/powerline.conf
 set -g status-interval 2
