--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/wallpaper.jpg
-wallpaper = ,~/Pictures/wallpaper.jpg
+preload = ~/Pictures/wallpaper/coniferous_forest_road_sun_rays_shines_through_trees-wallpaper-3440x1440.jpg
+wallpaper = ,~/Pictures/wallpaper/coniferous_forest_road_sun_rays_shines_through_trees-wallpaper-3440x1440.jpg
