--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -2,13 +2,14 @@
 
 # shell=$SHELL (if set, otherwise user's default shell from /etc/passwd)
 # term=foot (or xterm-256color if built with -Dterminfo=disabled)
+term=xterm-256color
 # login-shell=no
 
 # app-id=foot # globally set wayland app-id. Default values are "foot" and "footclient" for desktop and server mode
 # title=foot
 # locked-title=no
 
-font=UDEVGothic35NFLG:size=12
+font=UDEVGothic35NFLG:size=10
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -20,7 +21,7 @@ font=UDEVGothic35NFLG:size=12
 # underline-offset=<font metrics>
 # underline-thickness=<font underline thickness>
 # box-drawings-uses-font-glyphs=no
-# dpi-aware=no
+dpi-aware=yes
 
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
