--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -11,11 +11,15 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-4,preferred,0x0,auto
-monitor=HDMI-A-2,preferred,3440x0,auto
+monitor=DP-4,preferred,0x0,1
+monitor=HDMI-A-2,preferred,3440x0,1
 monitor=DP-5,1920x1080,0x1440,1
-monitor=DP-6,1920x1080,1920x1080,1
+monitor=DP-6,1920x1080,1920x1440,1
 
+workspace=1,monitor:DP-4
+workspace=2,monitor:HDMI-A-2
+workspace=3,monitor:DP-5
+workspace=4,monitor:DP-6
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
