--- a/.gitconfig
+++ b/.gitconfig
@@ -25,9 +25,9 @@
 	st = status
 	ba = branch -a
   # いい感じのグラフでログを表示
-  graph = log --graph --date=short --decorate=short --pretty=format:'%Cgreen%h %Creset%cd %Cblue%cn %Cred%d %Creset%s'
+  graph = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
   # 上の省略形
-  gr = log --graph --date=short --decorate=short --pretty=format:'%Cgreen%h %Creset%cd %Cblue%cn %Cred%d %Creset%s'
+  gr = graph
   difff = diff --word-diff
   stt = status -uno
   today = log --oneline --since='12 hour ago'
