--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -2,7 +2,7 @@
 
 # shell=$SHELL (if set, otherwise user's default shell from /etc/passwd)
 # term=foot (or xterm-256color if built with -Dterminfo=disabled)
-term=xterm-256color
+term=foot-direct
 # login-shell=no
 
 # app-id=foot # globally set wayland app-id. Default values are "foot" and "footclient" for desktop and server mode
@@ -21,7 +21,7 @@ font=UDEVGothic35NFLG:size=10
 # underline-offset=<font metrics>
 # underline-thickness=<font underline thickness>
 # box-drawings-uses-font-glyphs=no
-dpi-aware=yes
+# dpi-aware=no
 
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
@@ -55,7 +55,7 @@ workers=16
 # indicator-format=""
 
 [url]
-# launch=xdg-open ${url}
+launch=xdg-open ${url}
 # label-letters=sadfjklewcmpgh
 # osc8-underline=url-mode
 # protocols=http, https, ftp, ftps, file, gemini, gopher
