--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -48,7 +48,8 @@ env = MOZ_ENABLE_WAYLAND,1
 env = GST_VAAPI_ALL_DRIVERS,1
 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = dunst &
+# exec-once = dunst &
+exec-once = swaync &
 exec-once = fcitx5 &
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
@@ -56,7 +57,7 @@ exec-once = fcitx5 &
 # exec-once = eww open bar &
 exec-once = ~/.config/waybar/bin/launch_waybar.sh # waybar
 exec-once = nm-applet --indicator
-exec-once = hyprpaper & edge.sh
+exec-once = hyprpaper
 exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE"
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -178,7 +179,9 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, F, fullscreen,1
+bind = $mainMod, F, fullscreen,0
+bind = $mainMod, N, exec, swaync-client -t -sw
+
 # bind = $mainMod, R, exec, $menu & sleep 0.2; hyprctl dispatch focuswindow "^(Rofi)"
 bind = $mainMod, R, exec, sh $HOME/.config/rofi/bin/launcher & sleep 0.2; hyprctl dispatch focuswindow "^(Rofi)"
 bind = $mainMod, P, exec, sh $HOME/.config/rofi/bin/powermenu & sleep 0.2; hyprctl dispatch focuswindow "^(Rofi)"
