--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -11,8 +11,8 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-4,preferred,0x0,1
-monitor=HDMI-A-2,preferred,3440x0,1
+monitor=DP-4,3440x1440@165,0x0,1
+monitor=HDMI-A-2,1920x1080@240,3440x0,1
 monitor=DP-5,1920x1080,0x1440,1
 monitor=DP-6,1920x1080,1920x1440,1
 
@@ -26,6 +26,7 @@ workspace=4,monitor:DP-6
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
+source =  ~/.config/hypr/mocha.conf
 
 # Set programs that you use
 $terminal = foot
@@ -165,6 +166,8 @@ device {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = stayfocused, title:^()$,class:^(steam)$
+windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
 windowrule = float, Rofi
 windowrule = noborder, Rofi
 windowrule = float, title:^(sfml)$
