--- a/config/Brewfile
+++ b/config/Brewfile
@@ -7,6 +7,7 @@ tap "mackerelio/mackerel-agent"
 tap "microsoft/git"
 tap "minamijoyo/myaws"
 tap "mscharley/homebrew"
+tap "rhysd/hgrep", "https://github.com/rhysd/hgrep"
 brew "pycparser"
 brew "cffi"
 brew "openssl@3"
@@ -41,6 +42,7 @@ brew "harfbuzz"
 brew "pango"
 brew "librsvg"
 brew "chafa"
+brew "chezmoi"
 brew "cmake"
 brew "node"
 brew "commitlint"
@@ -49,12 +51,11 @@ brew "ctags"
 brew "rtmpdump"
 brew "curl"
 brew "deno"
-brew "docker-machine"
 brew "docutils"
 brew "duf"
+brew "libevent"
 brew "eza"
 brew "fastfetch"
-brew "libevent"
 brew "fd"
 brew "open-mpi"
 brew "fish"
@@ -95,6 +96,7 @@ brew "shared-mime-info"
 brew "imagemagick"
 brew "jemalloc"
 brew "jj"
+brew "joshuto"
 brew "jpeg"
 brew "jpegoptim"
 brew "jq"
@@ -140,8 +142,6 @@ brew "postgresql@13"
 brew "postgresql@14"
 brew "prettierd"
 brew "protobuf@3"
-brew "pyenv"
-brew "pyenv-virtualenv"
 brew "redis"
 brew "ripgrep"
 brew "ruby-build"
@@ -173,13 +173,16 @@ brew "elastic/tap/elasticsearch-full"
 brew "jdx/tap/usage"
 brew "mackerelio/mackerel-agent/mkr"
 brew "minamijoyo/myaws/myaws"
+brew "rhysd/hgrep/hgrep"
 cask "alt-tab"
 cask "appcleaner"
 cask "arc"
 cask "aws-vault"
+cask "bruno"
 cask "chromedriver"
 cask "discord"
 cask "displaylink"
+cask "firefox"
 cask "flutter"
 cask "git-credential-manager"
 cask "google-cloud-sdk"
@@ -187,7 +190,9 @@ cask "hammerspoon"
 cask "lastpass"
 cask "notion"
 cask "orbstack"
+cask "pomotroid"
 cask "postman"
+cask "proxyman"
 cask "raycast"
 cask "secretive"
 cask "stats"
