--- a/config/Brewfile
+++ b/config/Brewfile
@@ -1,4 +1,5 @@
 tap "elastic/tap"
+tap "facebook/fb"
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 tap "homebrew/services"
@@ -8,6 +9,7 @@ tap "microsoft/git"
 tap "minamijoyo/myaws"
 tap "mscharley/homebrew"
 tap "rhysd/hgrep", "https://github.com/rhysd/hgrep"
+tap "teamookla/speedtest"
 brew "pycparser"
 brew "cffi"
 brew "openssl@3"
@@ -26,7 +28,6 @@ brew "python@3.11"
 brew "awscli"
 brew "bash"
 brew "libssh2"
-brew "libgit2"
 brew "bat"
 brew "bit-git"
 brew "boost"
@@ -54,6 +55,7 @@ brew "deno"
 brew "docutils"
 brew "duf"
 brew "libevent"
+brew "libgit2"
 brew "eza"
 brew "fastfetch"
 brew "fd"
@@ -148,7 +150,7 @@ brew "ruby-build"
 brew "rubyfmt"
 brew "scdoc"
 brew "scons"
-brew "sheldon"
+brew "sheldon", link: false
 brew "sk"
 brew "source-to-image"
 brew "starship"
@@ -170,10 +172,12 @@ brew "yarn"
 brew "zoxide"
 brew "zplug"
 brew "elastic/tap/elasticsearch-full"
+brew "facebook/fb/idb-companion"
 brew "jdx/tap/usage"
 brew "mackerelio/mackerel-agent/mkr"
 brew "minamijoyo/myaws/myaws"
 brew "rhysd/hgrep/hgrep"
+brew "teamookla/speedtest/speedtest"
 cask "alt-tab"
 cask "appcleaner"
 cask "arc"
@@ -183,6 +187,7 @@ cask "chromedriver"
 cask "discord"
 cask "displaylink"
 cask "firefox"
+cask "flipper"
 cask "flutter"
 cask "git-credential-manager"
 cask "google-cloud-sdk"
