--- a/config/Brewfile
+++ b/config/Brewfile
@@ -24,7 +24,6 @@ brew "glib"
 brew "at-spi2-core"
 brew "autoconf"
 brew "automake"
-brew "python@3.11"
 brew "awscli"
 brew "bash"
 brew "libssh2"
@@ -32,7 +31,6 @@ brew "bat"
 brew "bit-git"
 brew "boost"
 brew "bottom"
-brew "gmp"
 brew "btop"
 brew "freetype"
 brew "fontconfig"
@@ -47,6 +45,7 @@ brew "chezmoi"
 brew "cmake"
 brew "node"
 brew "commitlint"
+brew "gmp"
 brew "coreutils"
 brew "ctags"
 brew "rtmpdump"
@@ -121,14 +120,17 @@ brew "luv"
 brew "lynx"
 brew "mecab"
 brew "mecab-ipadic"
-brew "memcached", restart_service: true
+brew "memcached"
 brew "mercurial"
 brew "ninja"
 brew "meson"
+brew "usage"
 brew "mise"
 brew "msgpack"
 brew "mysql"
 brew "neofetch"
+brew "tree-sitter"
+brew "neovim"
 brew "nghttp2"
 brew "nkf"
 brew "node-build"
@@ -144,13 +146,15 @@ brew "postgresql@13"
 brew "postgresql@14"
 brew "prettierd"
 brew "protobuf@3"
+brew "python@3.11"
 brew "redis"
 brew "ripgrep"
 brew "ruby-build"
 brew "rubyfmt"
+brew "rust"
 brew "scdoc"
 brew "scons"
-brew "sheldon", link: false
+brew "sheldon"
 brew "sk"
 brew "source-to-image"
 brew "starship"
@@ -160,7 +164,6 @@ brew "tig"
 brew "tmux"
 brew "tmux-mem-cpu-load"
 brew "tree"
-brew "tree-sitter"
 brew "unixodbc"
 brew "v8"
 brew "vips"
@@ -173,7 +176,6 @@ brew "zoxide"
 brew "zplug"
 brew "elastic/tap/elasticsearch-full"
 brew "facebook/fb/idb-companion"
-brew "jdx/tap/usage"
 brew "mackerelio/mackerel-agent/mkr"
 brew "minamijoyo/myaws/myaws"
 brew "rhysd/hgrep/hgrep"
@@ -182,12 +184,9 @@ cask "alt-tab"
 cask "appcleaner"
 cask "arc"
 cask "aws-vault"
-cask "bruno"
 cask "chromedriver"
 cask "discord"
-cask "displaylink"
 cask "firefox"
-cask "flipper"
 cask "flutter"
 cask "git-credential-manager"
 cask "google-cloud-sdk"
@@ -202,6 +201,7 @@ cask "raycast"
 cask "secretive"
 cask "stats"
 cask "tableplus"
+cask "usage"
 cask "visual-studio-code"
 cask "vlc"
 vscode "42crunch.vscode-openapi"
