--- a/config/Brewfile
+++ b/config/Brewfile
@@ -120,14 +120,13 @@ brew "luv"
 brew "lynx"
 brew "mecab"
 brew "mecab-ipadic"
-brew "memcached"
+brew "memcached", restart_service: true
 brew "mercurial"
 brew "ninja"
 brew "meson"
-brew "usage"
+brew "usage", link: false
 brew "mise"
 brew "msgpack"
-brew "mysql"
 brew "neofetch"
 brew "tree-sitter"
 brew "neovim"
@@ -159,6 +158,7 @@ brew "sk"
 brew "source-to-image"
 brew "starship"
 brew "stylua"
+brew "telnet"
 brew "terminal-notifier"
 brew "tig"
 brew "tmux"
@@ -182,6 +182,7 @@ brew "rhysd/hgrep/hgrep"
 brew "teamookla/speedtest/speedtest"
 cask "alt-tab"
 cask "appcleaner"
+cask "aquaskk"
 cask "arc"
 cask "aws-vault"
 cask "chromedriver"
