--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,9 +41,9 @@ set -s escape-time 0
 
 # 256色ターミナル
 # set-option -g default-terminal "screen-256color""
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal "screen-256color"
-set -ag terminal-overrides ",alacritty:RGB"
+# set -ag terminal-overrides ",alacritty:RGB"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # set-option -g default-shell /usr/local/bin/fish
 # set-option -g default-shell "${SHELL}"
@@ -194,7 +194,9 @@ bind -n M-e choose-session
 bind -n M-w choose-tree -w
 
 unbind Space
-bind Space popup -xC -yC -w70% -h70% -E 'tmux a -t popup || tmux new -s popup'
+bind Space popup -xC -yC -w70% -h70% -E 'tmux a -t popup || tmux new -s popup -c "#{pane_current_path}"'
+unbind G
+bind G popup -xC -yC -w70% -h70% -E 'tmux a -t popup || tmux new -s popup -c "#{pane_current_path}" lazygit'
 
 # Reattach each new window to the user bootstrap namespace
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
