--- a/config/Brewfile
+++ b/config/Brewfile
@@ -27,8 +27,10 @@ brew "automake"
 brew "awscli"
 brew "bash"
 brew "libssh2"
+brew "libgit2"
 brew "bat"
 brew "bit-git"
+brew "icu4c@76"
 brew "boost"
 brew "bottom"
 brew "btop"
@@ -38,6 +40,7 @@ brew "pixman"
 brew "cairo"
 brew "gdk-pixbuf"
 brew "harfbuzz"
+brew "libavif"
 brew "pango"
 brew "librsvg"
 brew "chafa"
@@ -54,7 +57,6 @@ brew "deno"
 brew "docutils"
 brew "duf"
 brew "libevent"
-brew "libgit2"
 brew "eza"
 brew "fastfetch"
 brew "fd"
@@ -65,7 +67,6 @@ brew "fontforge"
 brew "frum"
 brew "fsevent_watch"
 brew "fzf"
-brew "libavif"
 brew "gd"
 brew "gdbm"
 brew "gh"
@@ -74,13 +75,14 @@ brew "ghq"
 brew "git"
 brew "git-delta"
 brew "git-flow"
+brew "git-lfs"
 brew "gnu-barcode"
 brew "gnu-sed"
 brew "unbound"
 brew "gnutls"
 brew "gnupg"
 brew "go"
-brew "pkg-config"
+brew "pkgconf"
 brew "gobject-introspection"
 brew "gpgme"
 brew "netpbm"
@@ -118,15 +120,14 @@ brew "lua"
 brew "luarocks"
 brew "luv"
 brew "lynx"
-brew "mecab"
-brew "mecab-ipadic"
-brew "memcached", restart_service: true
+brew "memcached", restart_service: :changed
 brew "mercurial"
 brew "ninja"
 brew "meson"
-brew "usage", link: false
+brew "usage"
 brew "mise"
 brew "msgpack"
+brew "ncdu"
 brew "neofetch"
 brew "tree-sitter"
 brew "neovim"
@@ -141,8 +142,6 @@ brew "peco"
 brew "pidof"
 brew "pngquant"
 brew "poppler"
-brew "postgresql@13"
-brew "postgresql@14"
 brew "prettierd"
 brew "protobuf@3"
 brew "python@3.11"
@@ -172,6 +171,7 @@ brew "watchman"
 brew "wget"
 brew "xdg-ninja"
 brew "yarn"
+brew "yt-dlp"
 brew "zoxide"
 brew "zplug"
 brew "elastic/tap/elasticsearch-full"
@@ -189,6 +189,7 @@ cask "chromedriver"
 cask "discord"
 cask "firefox"
 cask "flutter"
+cask "ghostty"
 cask "git-credential-manager"
 cask "google-cloud-sdk"
 cask "hammerspoon"
@@ -220,6 +221,7 @@ vscode "formulahendry.docker-extension-pack"
 vscode "github.codespaces"
 vscode "github.copilot"
 vscode "github.copilot-chat"
+vscode "golang.go"
 vscode "henriiik.docker-linter"
 vscode "htmlhint.vscode-htmlhint"
 vscode "jmreicha.tender"
