--- a/config/Brewfile
+++ b/config/Brewfile
@@ -30,7 +30,6 @@ brew "libssh2"
 brew "libgit2"
 brew "bat"
 brew "bit-git"
-brew "icu4c@76"
 brew "boost"
 brew "bottom"
 brew "btop"
@@ -40,6 +39,7 @@ brew "pixman"
 brew "cairo"
 brew "gdk-pixbuf"
 brew "harfbuzz"
+brew "icu4c@76"
 brew "libavif"
 brew "pango"
 brew "librsvg"
@@ -124,7 +124,7 @@ brew "memcached", restart_service: :changed
 brew "mercurial"
 brew "ninja"
 brew "meson"
-brew "usage"
+brew "usage", link: false
 brew "mise"
 brew "msgpack"
 brew "ncdu"
@@ -194,6 +194,7 @@ cask "git-credential-manager"
 cask "google-cloud-sdk"
 cask "hammerspoon"
 cask "lastpass"
+cask "neovide"
 cask "notion"
 cask "orbstack"
 cask "pomotroid"
