--- a/config/neovide/config.toml
+++ b/config/neovide/config.toml
@@ -16,6 +16,6 @@ wsl = false
 [font]
 normal = [
   "UDEV Gothic 35NFLG",
-
+  "Symbols Nerd Font Mono",
 ] # Will use the bundled Fira Code Nerd Font by default
-size = 14.0
+size = 42.0
