--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -10,5 +10,7 @@ go = "latest"
 lazygit = "latest"
 neovim = "latest"
 node = "latest"
+python = "latest"
 ripgrep = "latest"
 starship = "latest"
+usage = "latest"
