--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -1,5 +1,6 @@
 [tools]
 bat = "latest"
+cmake = "latest"
 delta = "latest"
 eza = "latest"
 fd = "latest"
@@ -13,4 +14,6 @@ node = "latest"
 python = "latest"
 ripgrep = "latest"
 starship = "latest"
+tmux = "latest"
 usage = "latest"
+zoxide = "latest"
