--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -13,6 +13,7 @@ neovim = "latest"
 node = "latest"
 python = "latest"
 ripgrep = "latest"
+rust = "latest"
 starship = "latest"
 tmux = "latest"
 usage = "latest"
