--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -11,7 +11,7 @@ lazygit = "latest"
 node = "latest"
 python = "latest"
 ripgrep = "latest"
-rust = "latest"
+rust = "nightly"
 starship = "latest"
 tmux = "latest"
 usage = "latest"
