--- a/.gitconfig
+++ b/.gitconfig
@@ -35,6 +35,7 @@
 	showpr = "!f() { git log --merges --oneline --reverse --ancestry-path $1...master | grep 'Merge pull request #' | head -n 1; }; f"
 	; openpr = "!f() { hub browse -- `git log --merges --oneline --reverse --ancestry-path $1...master | grep 'Merge pull request #' | head -n 1 | cut -f5 -d' ' | sed -e 's%#%pull/%'`; }; f"
 	openpr = "!f() { gh pr view --web; }; f"
+  pushf = push --force-with-lease --force-if-includes
 [fetch]
 	prune = true
 [ghq]
